Added final resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,34 @@
     <string name="elizabeth_quay">Located near the Perth CBD and named in honor of
     Queen Elizabeth II. Entertainment and leisure precinct with a water inlet
     overlooked by the iconic pedestrian bridges.</string>
+
+    <string name="kings_park">4.06 square-kilometre park west of the Perth CBD. Panoramic views of
+    the Swan River and Darling Range and one of the most popular
+    visitor destinations in Western Australia.</string>
+
+    <string name="rottnest_island">Located off the coast of Perth, the island is the home of the
+     quokkas and is renowned for it\'s scenic beaches and unique geographical features.
+     Popular bike trails cover the island.</string>
+
+    <string name="caversham_park">Walk-in free roaming wildlife park containing some of Australia\'s
+    most iconic animals such as kangaroos, koalas, wombats and more. Unlike a zoo,
+    the animals are mostly roaming freely throughout the park.</string>
+
+    <string name="the_pinnacles">2 hours north from Perth lie the unique limestone formations within
+    the Nambung National Park, starting their formation from seashells
+    in an earlier era.</string>
+
+    <string name="scarborough_beach">One of the best white sand beaches in the world, and next to
+    a variety of restaurants, accommodation and shops. Windsurfing
+    and kitesurfing is also offered here.</string>
+
+    <string name="cottesloe_beach">Located only 15 minutes away from the city, Cottesloe beach is
+    overlooked by its grassy esplanade and tall Norfolk Pines.</string>
+
+    <string name="hillarys_boat_harbour">Home to some of the best seafood in Perth, the stillwater
+    beach is closeby to the AQWA aquarium and large shopping boardwalk.</string>
+
+    <string name="swan_valley">Award-winning wineries and vineyards located only 25 minutes
+    from the city. All wineries offer wine-tasting and alfresco dining with many tour services
+    operating throughout the area.</string>
 </resources>
